test/Fail/Issue1228.err
Issue1228.agda:40,1-45: error: [UnquoteFailed]
Use def instead of con for non-constructor tt
